--- a/doc/moreexamples.tex
+++ b/doc/moreexamples.tex
@@ -27,9 +27,9 @@ examples in Appendix~"Examples" first.
 \Section{Getting Started}
 
 Each     of     the      functions      `ACECosetTableFromGensAndRels'
-(see~"ACECosetTableFromGensAndRels"),                       `ACEStats'
-(see~"ACEStats!non-interactive") and `ACEStart' (see~"ACEStart"),  may
-be called with three arguments: <fgens> (the group generators), <rels>
+(see~"ACECosetTableFromGensAndRels"), `ACEStats'  (see~"ACEStats"  ---
+non-interactive  version)  and  `ACEStart'  (see~"ACEStart"),  may  be
+called with three arguments: <fgens> (the  group  generators),  <rels>
 (the group relators), and <sgens> (the subgroup generators). While  it
 is legal for the arguments <rels> and <sgens> to be empty lists, it is
 always an error for <fgens> to be empty, e.g.
