--- a/standalone-doc/back.tex
+++ b/standalone-doc/back.tex
@@ -33,16 +33,16 @@ We use $1$ to denote the identity element and/or the subgroup (i.e.,
 %\dots dead coset(s), compact(ion).
 
 \section{Groups notation}
-For a subgroup $H$ of a group $G$, we represent by $[G:H]$ the set of right
+For a subgroup $H$ of a group $G$, we represent by $(G:H)$ the set of right
   cosets of $H$ in $G$, i.e.
-  $$ [G:H] = \{ Hx \mid x \in G \}. $$
-Two cosets $Hx, Hy \in [G:H]$ are equal, i.e.~coincident, if and only if
+  $$ (G:H) = \{ Hx \mid x \in G \}. $$
+Two cosets $Hx, Hy \in (G:H)$ are equal, i.e.~coincident, if and only if
   $xy^{-1} \in H$.
-Also, any two cosets of $[G:H]$ are either coincident or disjoint.
-The cardinality of $[G:H]$ is the number of distinct cosets in $[G:H]$,
+Also, any two cosets of $(G:H)$ are either coincident or disjoint.
+The cardinality of $(G:H)$ is the number of distinct cosets in $(G:H)$,
   and is equal to the index $|G:H|$ of $H$ in $G$, 
-  i.e.~$\bigl|[G:H]\bigr| = |G:H|$.
-In fact, $[G:H]$ is a partition of $G$ into subsets of $G$, each of
+  i.e.~$\bigl|(G:H)\bigr| = |G:H|$.
+In fact, $(G:H)$ is a partition of $G$ into subsets of $G$, each of
   cardinality $|H|$, the order of $H$; and if $G$ is finite then
   $|G:H| = |G|/|H|$.
 
@@ -73,7 +73,7 @@ The concept of a subgroup, and its cosets, has been known since the
 One of the earliest (practical?) uses of cosets seems to have been by
   Moore \cite{Moo97}, who gives presentations for $S_n$ \amp $A_n$ and
   proves them correct by, in effect, counting the $n$ cosets of 
-  $[S_n:S_{n-1}]$ \amp $[A_n:A_{n-1}]$.
+  $(S_n:S_{n-1})$ \amp $(A_n:A_{n-1})$.
 Dickson \cite[\S264]{Dic01} presents a more accessible account, and 
   explicitly notes that ``these sets form a rectangular table''\kern-2pt.
 %
@@ -125,7 +125,7 @@ It is \emph{faithful} in this case, since the largest subgroup of $S_3$
 
 \begin{table}
 \hrule
-\caption{The coset table for $[S_4:S_3]$}
+\caption{The coset table for $(S_4:S_3)$}
 \label{tab:dic}
 \smallskip
 \renewcommand{\arraystretch}{0.875}
