--- a/standalone-doc/pt.tex
+++ b/standalone-doc/pt.tex
@@ -28,11 +28,11 @@ The Fibonacci group
  $$ F(2,5) = \langle a,b,c,d,e \mid abC, bcD, cdE, deA, eaB \rangle $$
   is known to be the cyclic group of order $11$, $C_{11}$ \cite{Con65}.
 A proof of this can be readily extracted from an index one coset 
-  enumeration of $[F(2,5) : \langle a \rangle]$, as discussed in \cite{Lee77}.
+  enumeration of $(F(2,5) : \langle a \rangle)$, as discussed in \cite{Lee77}.
 We use this as an example to illustrate, in detail, the basic technique for
   producing proofs from the workings of an enumeration.
 %
-For an enumeration of $[F(2,5) : \langle a \rangle]$, it is obvious that a
+For an enumeration of $(F(2,5) : \langle a \rangle)$, it is obvious that a
   total of more than one coset must be defined, and it is straightforward
   to establish that two are not sufficient, since there are only eight
   possible choices to check for the definition of coset \#$2$.
