Updated a previously `to appear' bibitem that has since appeared.

--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -310,9 +310,13 @@
 
 @ARTICLE{HR00,
   AUTHOR        = {George Havas and Colin Ramsay},
-  TITLE         = {The trivial group made easy},
+  TITLE         = {Proving a group trivial made easy: 
+                   a case study in coset enumeration},
   JOURNAL       = {Bulletin of the Australian Mathematical Society},
-  YEAR          = {to appear}
+  YEAR          = {2000},
+  VOLUME        = {62},
+  NUMBER        = {1},
+  PAGES         = {105--118}
 }
 
 @ARTICLE{Hig51,
