README:   Updated to mention bugfix in ACE source file: src/util1.c and added   file src/CHANGES. Also, updated list of compilers with which ACE has   been successfully compiled. src/CHANGES:   New. Lists changes made to src directory provided by Colin Ramsay and   George Havas. src/Makefile.in:   Added some extra comments for choice of CC and provided two commented   alternatives for cc on SGI for 32bit and 64bit.   Changed := to = for THEDATE (:= upsets some make s). src/coinc.c:   Removed unused variable l (see src/CHANGES). src/postproc.c   Changed bad usage of `normalise' (see src/CHANGES). src/util1.c   Removed bug (see src/CHANGES). gap/interact.gi   Modified ACEConjugatesForSubgroupNormalClosure for change in   src/postproc.c. doc/interact.tex, doc/otheroptions.tex:   Put $$ on lines of their own so the on-line help parses the maths   displays correctly.

--- a/doc/interact.tex
+++ b/doc/interact.tex
@@ -443,8 +443,10 @@ information messages are printed to the {\ACE} output:
 As an example (drawn from the discussion in \cite{HR99a}) consider the
 enumeration   of   the   $448$   coset   numbers   of   the   subgroup
 $\langle  a^2,Ab \rangle$ of the group
-$$ (8,7 \mid 2,3) 
-    = \langle a,b \mid a^8 = b^7 = (ab)^2 = (Ab)^3 = 1 \rangle. $$
+$$
+(8,7 \mid 2,3) 
+    = \langle a,b \mid a^8 = b^7 = (ab)^2 = (Ab)^3 = 1 \rangle.
+$$
 There are $4!=24$  relator  orderings  and  $2^4=16$  combinations  of
 relator or inverted relator. Exponents are  taken  into  account  when
 rotating relators, so the relators given give rise to 1, 1,  2  and  2
@@ -1260,8 +1262,9 @@ where we know pretty well what to expect.
 
 Let $G$ be the group, isomorphic to the symmetric  group  $S_6$,  with
 the presentation
-$$\{ a, b \mid a^2, b^6, (ab^{-1}ab)^3, (ab^{-1}ab^2)^4,
-               (ab)^5, (ab^-2ab^2)^2 \}$$ 
+$$
+\{ a, b \mid a^2, b^6, (ab^{-1}ab)^3, (ab^{-1}ab^2)^4, (ab)^5, (ab^-2ab^2)^2 \}
+$$
 (from  \cite{CM72}),  and  let  $H$  be  the  subgroup  $\langle  ab^3
 \rangle$. There is an isomorphism $\phi$ from $G$ to $S_6$ mapping $a$
 onto $(1,2)$ and $ab^3$ onto $(1,2,3,4,5,6)$. It follows  that  $\phi$
