--- a/doc/otheroptions.tex
+++ b/doc/otheroptions.tex
@@ -88,8 +88,10 @@ information messages are printed to the {\ACE} output file:
 As an example (drawn from the discussion in \cite{HR99a}) consider the
 enumeration   of   the   $448$   coset   numbers   of   the   subgroup
 $\langle  a^2,Ab \rangle$ of the group
-$$ (8,7 \mid 2,3) 
-    = \langle a,b \mid a^8 = b^7 = (ab)^2 = (Ab)^3 = 1 \rangle. $$
+$$
+(8,7 \mid 2,3) 
+    = \langle a,b \mid a^8 = b^7 = (ab)^2 = (Ab)^3 = 1 \rangle.
+$$
 There are $4!=24$  relator  orderings  and  $2^4=16$  combinations  of
 relator or inverted relator. Exponents are  taken  into  account  when
 rotating relators, so the relators given give rise to 1, 1,  2  and  2
