--- a/README
+++ b/README
@@ -4,7 +4,7 @@ The ACE share package provides functions associated with  Todd-Coxeter
 coset enumeration by interfacing with the  Advanced  Coset  Enumerator
 (ACE), 
 
-ACE coset enumerator (C) 1995-1999 by George Havas and Colin Ramsay
+ACE coset enumerator (C) 1995-2001 by George Havas and Colin Ramsay
     http://www.csee.uq.edu.au/~havas/ace3.tar.gz
 
 from within GAP 4.
@@ -103,22 +103,32 @@ times) in the `standalone-doc' directory, which gives  information  on
 how to use the ACE binary as a stand-alone.
 
 The `src' subdirectory contains a copy of the C source code  for  ACE.
-(The only modification is that a make-file was copied  to  `Makefile'.
-You can replace it by a newer version before compiling.)
+The only modification are those listed in src/CHANGES. In particular,
+the file `src/Makefile.in' from which `src/Makefile' is generated has
+been added, and the following bug was fixed on 25 February, 2001.
 
-The only known  problems  with  compilation  of  ACE  occur  with  old
-versions of gcc (gcc 2.7.2.1 and gcc 2.7.2.3 under Linux are known  to
-produce a buggy ACE whereby options that output coset  representatives
-may cause a segmentation fault). The following C compilers  are  known
-to be ok:
+A bug was discovered in ACE on 22 December, 2000 that was particularly
+manifested by the Linux  gcc  compilers  listed  below.  The  bug  was
+reported  with  fix  by  Volker  Gebhardt  (thanks!)  and   caused   a
+segmentation fault  when  ACE  output  coset  representatives.  Please
+ensure that src/util1.c has at line 704:
+    scol = 0;
+and the following change at line 714 (numbering after line 704 added):
+        else if (i == slow && scol)     /* Same row; earlier column? */
+
+ACE has been compiled successfully with the following C compilers:
 
    compiler             platform              comments
    --------             --------              --------
+   gcc 2.7.2.1          Linux
+   gcc 2.7.2.3          Linux
    gcc 2.8.1            Solaris 2.51/IRIX 6.5 
+   cc MIPSpro 7.2.1     IRIX 6.5
    cc MIPSpro 7.3.1.1m  IRIX 6.5              (compiled with -64 = 64bit)
    gcc 2.91.66 19990314 Linux                 (egcs 1.1.2 release)
    gcc 2.95.2 19990906  Linux                 (prerelease)
-   gcc 2.95.2 19991024  Solaris 2.51          (release)
+   gcc 2.95.2 19991024  Solaris 2.51, 2.8     (release)
+   gcc 2.95.2 20000220  Linux                 (release)
 
 (Since April 1999, egcs has been the official Gnu cc supplier. This is
 why the numbering now follows egcs' numbering.)
@@ -139,4 +149,4 @@ Alexander Hulpke <ahulpke@math.ohio-state.edu>.
     Australia
     e-mail: gregg@csee.uq.edu.au
     www:    http://www.csee.uq.edu.au/~gregg
-  -- 24 January, 2001.
+  -- 25 February, 2001.
